@@ -1,5 +1,3 @@
 TODO
 
-* Split the widget ROMs selection dialog into one dialog for each machine.
-
 $Id$
