@@ -609,3 +609,5 @@
 20040301 configure.in: make GTK+ 2.x the default user interface.
 20040301 ui/gtk/{gtkinternals.h,gtkui.c,roms.c}: split the ROMs selection
 	 dialog into one dialog for each machine.
+20040302 ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,roms.c,widget_internals.h}:
+	 split the ROMs selection dialog into one dialog for each machine.
